# hledger-fmt

./: .editorconfig  .gitignore  .markdown-link-check.json  .pre-commit-config.yaml  .pre-commit-hooks.yaml  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  EXAMPLES.md  PERFORMANCE_IMPROVEMENTS.md  PERFORMANCE_OPPORTUNITIES.md  PERFORMANCE_REPORT.md  PROFILING.md  PROFILING_ANALYSIS.md  README.md  build.rs  lychee.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml
benches/: format.rs  parse.rs  parse_and_format.rs
crates/bench_helpers/: Cargo.toml
crates/bench_helpers/src/: lib.rs
fuzz/: Cargo.toml
fuzz/artifacts/fuzz_parse/: crash-644e5a9cf203f4390eaddb3acac8714f69e39f57  crash-8c8767e9f2a6a97329353313132085fde8e263c2
fuzz/corpus/: README.md  basic.journal  cheatsheet.hledger  multicurrency.journal  stock-trading.journal  uk-finances.journal
fuzz/corpus/fuzz_format/: basic.journal
fuzz/coverage/fuzz_parse/raw/: default-fuzz_parse.profraw
fuzz/fuzz_targets/: fuzz_format.rs  fuzz_parse.rs  fuzz_roundtrip.rs
scripts/: bloat-analysis.sh  prepare-readme-for-crates.sh  profile.sh
src/: byte_str.rs  cli.rs  common.rs  file_path.rs  lib.rs  main.rs  tracing.rs
src/cli/: builder.rs  mod.rs  tests.rs
src/formatter/: mod.rs  tests.rs
src/parser/: errors.rs  mod.rs  tests.rs
tests/: Cargo.toml  version_sync.rs
tests/src/: docs.rs  lib.rs
