[package]
name = "hledger-fmt"
version = "0.2.10"
rust-version = "1.74.1"
edition = "2021"
description = "An opinionated hledger's journal files formatter."
repository = "https://github.com/mondeja/hledger-fmt"
authors = ["Álvaro Mondéjar Rubio"]
license = "MIT"
keywords = ["hledger", "journal", "formatter", "accounting"]
categories = ["command-line-utilities", "finance", "value-formatting"]
exclude = [
  ".editorconfig",
  ".github",
  "fuzz",
  ".pre-commit-config.yaml",
  ".pre-commit-hooks.yaml",
  ".markdown-link-check.json",
  ".gitignore",
  ".vscode",
]

[[bin]]
name = "hledger-fmt"

[dependencies]
clap.workspace = true
similar = "2"
anstream = { version = "0.6", optional = true, default-features = false }
anstyle = { version = "1", optional = true, default-features = false }

[features]
default = ["color", "auto-color"]
color = ["dep:anstream", "dep:anstyle", "clap/color"]
auto-color = ["anstream?/auto", "anstream?/wincon"]
manpages = ["dep:clap_mangen"]

[profile.release]
strip = true
opt-level = "z"  # optimize for size
lto = true
codegen-units = 1
panic = "abort"

[workspace]
members = ["."]

[workspace.dependencies]
clap = { version = "4", default-features = false, features = ["std", "help"] }

[build-dependencies]
clap.workspace = true
clap_mangen = { version = ">=0.2", optional = true }

[dev-dependencies]
assert_cmd = "2"
ctor = "0.4"
tempfile = "3"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }{ archive-suffix }"
